# workspace-ops-agent

./: .env.example  .gitignore  Makefile  PUSH_TO_GITHUB.md  README.md  docker-compose.yml  package-lock.json  package.json
backend/: Dockerfile  pyproject.toml
backend/app/: analysis_cache.py  config.py  db.py  main.py  metrics_store.py  models.py  observability.py  rate_limit.py  schemas.py  utils.py
backend/app/agents/: apply.py  ops_agent.py  placeholder.py  prompts.py
backend/app/analysis/: __init__.py  heuristics.py  pipeline.py  placeholder.py  scoring.py
backend/app/routes/: __init__.py  health.py  metrics.py  pages.py  recommendations.py  workspaces.py
backend/scripts/: seed.py
backend/tests/: conftest.py  test_analysis_api.py  test_e2e.py  test_guardrails.py  test_health.py  test_heuristics.py  test_scoring.py  test_seed.py
frontend/: Dockerfile  Dockerfile.dev  next.config.ts  package-lock.json  package.json
frontend/src/app/: layout.tsx  page.tsx
frontend/src/app/pages/[id]/: PageDetailClient.tsx  page.tsx
frontend/src/components/: DiffPreview.tsx
frontend/src/lib/: api.ts
scripts/: demo.sh
